--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,46 +1,37 @@
-# ChatGPT :alert: https://chatgpt.com/share/6760f375-7498-8005-a1b9-2e571d801af9
-name: Build JAR and Upload Artifact
+# Automatically build the project and run any configured tests for every push
+# and submitted pull request. This can help catch issues that only occur on
+# certain platforms or Java versions, and provides a first line of defence
+# against bad commits.
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+name: build
+on: [pull_request, push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        # Use these Java versions
+        java: [
+          21,    # Current Java LTS
+        ]
+    runs-on: ubuntu-22.04
     steps:
-      - name: Checkout repository
+      - name: checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up JDK
+      - name: validate gradle wrapper
+        uses: gradle/actions/wrapper-validation@v4
+      - name: setup jdk ${{ matrix.java }}
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17' # Change to your project's Java version
-
-      - name: Compile Java source files
-        run: |
-          mkdir -p build/classes
-          javac -d build/classes -classpath "libraries/*" $(find src -name "*.java") # Adjust 'src' to your source directory
-
-      - name: Create Manifest File
-        run: |
-          echo "Main-Class: Start" > build/manifest.txt # Replace 'your.main.ClassName' with your main class name
-          echo "" >> build/manifest.txt # Ensure a newline at the end of the file
-
-      - name: Package JAR
-        run: |
-          mkdir -p build/libs
-          jar cfm build/libs/app.jar build/manifest.txt -C build/classes . # Add compiled classes
-          for lib in libraries/*.jar; do
-            jar uf build/libs/app.jar -C $(dirname "$lib") $(basename "$lib") # Add library contents
-          done
-
-      - name: Upload JAR artifact
+          java-version: ${{ matrix.java }}
+          distribution: 'microsoft'
+      - name: make gradle wrapper executable
+        run: chmod +x ./gradlew
+      - name: build
+        run: ./gradlew build
+      - name: capture build artifacts
+        if: ${{ matrix.java == '21' }} # Only upload artifacts built from latest java
         uses: actions/upload-artifact@v4
         with:
-          name: built-fat-jar
-          path: build/libs/app.jar
+          name: Artifacts
+          path: build/libs/
