--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,7 @@ archives_base_name=sigma
 
 # Dependencies
 fabric_version=0.42.0+1.16
+
+sodium_version=mc1.16.5-0.2.0-fabric
+lithium_version=mc1.16.5-0.6.6-fabric
+viafabric_version=0.4.17+100-main
