--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,34 @@
                 <lwjgl.natives>natives-linux</lwjgl.natives>
             </properties>
         </profile>
+
+        <profile>
+            <id>lwjgl-natives-linux-arm64</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>linux</name>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <properties>
+                <lwjgl.natives>natives-linux-arm64</lwjgl.natives>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>lwjgl-natives-linux-arm32</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>linux</name>
+                    <arch>arm</arch>
+                </os>
+            </activation>
+            <properties>
+                <lwjgl.natives>natives-linux-arm32</lwjgl.natives>
+            </properties>
+        </profile>
         <profile>
             <id>lwjgl-natives-macos-x86_64</id>
             <activation>
@@ -40,6 +68,19 @@
                 <lwjgl.natives>natives-macos</lwjgl.natives>
             </properties>
         </profile>
+        
+        <profile>
+            <id>lwjgl-natives-macos-arm64</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <properties>
+                <lwjgl.natives>natives-macos-arm64</lwjgl.natives>
+            </properties>
+        </profile>
         <profile>
             <id>lwjgl-natives-windows-amd64</id>
             <activation>
@@ -50,6 +91,19 @@
             </activation>
             <properties>
                 <lwjgl.natives>natives-windows</lwjgl.natives>
+            </properties>
+        </profile>
+        
+        <profile>
+            <id>lwjgl-natives-windows-arm64</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <properties>
+                <lwjgl.natives>natives-windows-arm64</lwjgl.natives>
             </properties>
         </profile>
     </profiles>
@@ -67,6 +121,16 @@
     </dependencyManagement>
 
     <repositories>
+        <repository>
+        <id>central</id>
+        <url>https://repo1.maven.org/maven2</url>
+    </repository>
+    
+        <repository>
+             <id>minecraft</id>
+            <url>https://libraries.minecraft.net</url>
+        </repository>
+    
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
@@ -252,10 +316,10 @@
         </dependency>
 
         <dependency>
-            <groupId>com.ibm.icu</groupId>
-            <artifactId>icu4j-core-mojang</artifactId>
-            <version>51.2</version>
-        </dependency>
+           <groupId>com.ibm.icu</groupId>
+           <artifactId>icu4j-core-mojang</artifactId>
+           <version>51.2</version>
+</dependency>
 
         <dependency>
             <groupId>net.java.jinput</groupId>
@@ -299,6 +363,7 @@
             <version>2.8.1</version>
         </dependency>
 
+        <!-- LWJGL依赖 -->
         <dependency>
             <groupId>org.lwjgl</groupId>
             <artifactId>lwjgl</artifactId>
