refactor: add new versions to protocol info class & convert protocol info to a record

--- a/pom.xml
+++ b/pom.xml
@@ -142,10 +142,11 @@
 			<url>https://repo.clojars.org</url>
 		</repository>
         <repository>
-            <id>viaversion</id>
+            <id>viaversion-everything</id>
+            <name>ViaVersion Repository</name>
             <url>https://repo.viaversion.com/everything</url>
         </repository>
-	</repositories>
+    </repositories>
 
 	<dependencies>
 		<dependency>
